tests/snapshots/sdk_serialization_snapshots__receipts__receipt_partial_with_artifacts.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: receipt
---
{
  "meta": {
    "run_id": "[uuid]",
    "work_order_id": "a1a2a3a4-b1b2-c1c2-d1d2-d3d4d5d6d7d8",
    "contract_version": "abp/v0.1",
    "started_at": "[ts]",
    "finished_at": "[ts]",
    "duration_ms": 300
  },
  "backend": {
    "id": "partial-backend",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "mapped",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [
    {
      "kind": "patch",
      "path": "output/changes.patch"
    },
    {
      "kind": "log",
      "path": "output/run.log"
    }
  ],
  "verification": {
    "git_diff": "+fn new_function() {}",
    "git_status": "M src/lib.rs",
    "harness_ok": true
  },
  "outcome": "partial",
  "receipt_sha256": null
}
